--- a/GameJam 2018 Entry/Assembly-CSharp.csproj
+++ b/GameJam 2018 Entry/Assembly-CSharp.csproj
@@ -61,7 +61,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\RightState.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Scripts\Player Animation\LeftState.cs" />
+    <Compile Include="Assets\Scripts\Player Animation\RestState.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
