--- a/GameJam 2018 Entry/Assembly-CSharp.csproj
+++ b/GameJam 2018 Entry/Assembly-CSharp.csproj
@@ -63,13 +63,14 @@
   <ItemGroup>
     <Compile Include="Assets\RightState.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
-    <Compile Include="Assets\Scripts\InventoryController.cs" />
+    <Compile Include="Assets\Scripts\Inventory\InventoryController.cs" />
+    <Compile Include="Assets\Scripts\Inventory\Slot.cs" />
+    <Compile Include="Assets\Scripts\Inventory\SlotController.cs" />
+    <Compile Include="Assets\Scripts\MazeMaker.cs" />
     <Compile Include="Assets\Scripts\PickupController.cs" />
     <Compile Include="Assets\Scripts\Player Animation\LeftState.cs" />
     <Compile Include="Assets\Scripts\Player Animation\RestState.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\Slot.cs" />
-    <Compile Include="Assets\Scripts\SlotController.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
