--- a/GameJam 2018 Entry/Assembly-CSharp.csproj
+++ b/GameJam 2018 Entry/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Scripts\Inventory\InventoryController.cs" />
     <Compile Include="Assets\Scripts\Inventory\Slot.cs" />
     <Compile Include="Assets\Scripts\Inventory\SlotController.cs" />
+    <Compile Include="Assets\Scripts\MazeGenerator.cs" />
     <Compile Include="Assets\Scripts\MazeMaker.cs" />
     <Compile Include="Assets\Scripts\PickupController.cs" />
     <Compile Include="Assets\Scripts\Player Animation\LeftState.cs" />
