--- a/GameJam 2018 Entry/Assembly-CSharp.csproj
+++ b/GameJam 2018 Entry/Assembly-CSharp.csproj
@@ -104,6 +104,9 @@
     <Compile Include="Assets\FunkyCode\SmartUtilities2D\Scripts\Utilities\VirtualSpriteRenderer.cs" />
     <Compile Include="Assets\FunkyCode\SmartUtilities2D\Scripts\Utilities\VirtualTransform.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Scripts\Enemies\Shoot.cs" />
+    <Compile Include="Assets\Scripts\Enemies\Shooting_enemy_move.cs" />
+    <Compile Include="Assets\Scripts\Enemies\Sword_enemy_move.cs" />
     <Compile Include="Assets\Scripts\Inventory\InventoryController.cs" />
     <Compile Include="Assets\Scripts\Inventory\Slot.cs" />
     <Compile Include="Assets\Scripts\Inventory\SlotController.cs" />
